[JAVA 9] : Automatic modules - slf4-api